syntax = "proto3";

/* Equipment Control Interface::HatchContol */

package eci.hc;

enum HatchStatus {
  Undefined = 0;
  Open = 1;
  Closed = 2;
  ChangingPosition = 3;
  Faulty = 4;
}

message GetStatusReq
{

}

message GetStatusCfm
{
  HatchStatus status = 1;
}

message OpenHatchReq
{

}

message OpenHatchCfm
{

}

message CloseHatchReq
{

}

message CloseHatchCfm
{

}